kubernetes-manifests/sso-authorization-server/sso-authorization-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-authorization-server
  labels:
    app: sso-authorization-server
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-authorization-server
      tier: frontend
  template:
    metadata:
      labels:
        app: sso-authorization-server
        tier: frontend
    spec:
      containers:
      - name: sso-authorization-server
        image: sso-authorization-server
        ports:
        - name: http-server
          containerPort: 8080
