kubernetes-manifests/sso-authorization-server/sso-client-app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-authorization-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:  /auth/$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - localhost
      secretName: default-server-secret
  rules:
    - host: localhost
      http:
        paths:
          - path: /auth/(.*)
            pathType: Prefix
            backend:
              service:
                name: sso-authorization-server
                port:
                  number: 80
